--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,6 @@
-<div class="wrapper" ng-class="{'my-dtr': subdomain}">
+<div class="wrapper" ng-class="{'my-dtr': subdomain, 'focus-on-players': focusOnPlayers}">
   <div class="controls shadow-z-1" ng-controller="HeaderCtrl">
+    <div ng-click="switchFocus()">Expand / collapse</div>
     <header ng-include="'views/controls/top.html'"></header>
     <footer ng-include="'views/controls/bottom.html'"></footer>
   </div>
@@ -16,10 +17,27 @@
     </div>
     <div class="players" ng-if="fireteam[0] && !status">
       <div class="player-container"
+           ng-if="screenSize.md || screenSize.lg"
            ng-controller="PlayerCtrl as Player"
            ng-repeat="player in fireteam track by $index"
            ng-include="'views/player/index.html'">
       </div>
+      <div class="row" ng-if="screenSize.xs || screenSize.sm">
+        <div ng-if="screenSize.xs">
+          <ul rn-carousel>
+            <li class="col-xs-4" ng-controller="PlayerCtrl as Player" ng-repeat="player in fireteam track by $index" ng-include="'views/player/index.html'"></li>
+          </ul>
+        </div>
+        <div ng-if="screenSize.sm">
+          <ul rn-carousel>
+            <li><div class="col-xs-12" ng-controller="PlayerCtrl as Player" ng-repeat="player in fireteam track by $index" ng-include="'views/player/index.html'"></div></li>
+            <li><div class="col-xs-12"></div></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="overlay">
+
     </div>
   </div>
 </div>
