--- a/app/styles/parts/_controls.scss
+++ b/app/styles/parts/_controls.scss
@@ -27,3 +27,21 @@ header {
   padding-top: 0;
   overflow: hidden;
 }
+
+.controls__expand {
+  border-top-left-radius: 1em;
+  border-top-right-radius: 1em;
+  cursor: pointer;
+  text-align: center;
+
+  i {
+    transition: transform cubic-bezier(.55,0,.1,1) .3s;
+    font-size: 2em;
+    line-height: 1.5em;
+    color: white;
+  }
+
+  .focus-on-players & i {
+    transform: rotateZ(180deg);
+  }
+}
