--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,8 +1,12 @@
 <div class="wrapper" ng-class="{'my-dtr': subdomain, 'focus-on-players': focusOnPlayers}">
-  <div class="controls shadow-z-1" ng-controller="HeaderCtrl">
-    <div ng-click="switchFocus()">Expand / collapse</div>
-    <header ng-include="'views/controls/top.html'"></header>
-    <footer ng-include="'views/controls/bottom.html'"></footer>
+  <div class="controls-wrapper shadow-z-2">
+    <div class="controls" ng-controller="HeaderCtrl">
+      <div class="controls__expand" ng-if="screenSize.xs || screenSize.sm || screenSize.md" ng-click="switchFocus()">
+        <i class="material-icons">&#xE5CF;</i>
+      </div>
+      <header ng-include="'views/controls/top.html'"></header>
+      <footer ng-include="'views/controls/bottom.html'"></footer>
+    </div>
   </div>
   <div class="content">
     <div class="container-fluid" ng-if="status">
@@ -36,8 +40,6 @@
         </div>
       </div>
     </div>
-    <div class="overlay">
-
-    </div>
+    <div ng-click="switchFocus()" class="overlay"></div>
   </div>
 </div>
