--- a/app/styles/parts/_main-search.scss
+++ b/app/styles/parts/_main-search.scss
@@ -3,7 +3,6 @@
 }
 
 .main-search__fireteam {
-  margin-right: -1px;
   > form + div,
   > form + div + div {
     background: darken(white, 2%);
@@ -22,6 +21,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  flex-wrap: nowrap;
 }
 
 .main-search__controls {
