--- a/app/styles/parts/_player.scss
+++ b/app/styles/parts/_player.scss
@@ -20,12 +20,17 @@
   }
 }
 
+@media all and (max-width: 1280px) {
+  .players {
+    margin-bottom: 4em;
+  }
+}
+
 @media all and (max-width: 960px) {
   .players {
     padding-top: 1em;
     width: 100%;
     display: block;
-    margin-bottom: 4em;
   }
 }
 
