fix mobile safari viewport with new menu

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 <div class="wrapper" ng-class="{'my-dtr': subdomain, 'focus-on-players': focusOnPlayers}">
-  <div class="controls-wrapper shadow-z-2">
+  <div id="controls-wrapper" class="controls-wrapper shadow-z-2">
     <div class="controls" ng-controller="HeaderCtrl">
       <div class="controls__expand" ng-if="screenSize.xs || screenSize.sm || screenSize.md" ng-click="switchFocus()">
         <span ng-if="!fireteam[0]">Blog</span>
