--- a/app/styles/main/_layout.scss
+++ b/app/styles/main/_layout.scss
@@ -1,5 +1,3 @@
-html { height: 100%; }
-
 .main {
   width: 100vw;
   height: 100vh;
@@ -88,6 +86,10 @@ html { height: 100%; }
     .controls-wrapper {
       position: fixed;
       transform: translate(-50%, calc(100vh - 6em));
+    }
+
+    #controls-wrapper.not-min {
+      transform: translate(-50%, calc(89vh - 6em));
     }
 
     .content {
