added fixed FAB for menu to resolve safari issue and removed minimal-ui js lib

--- a/app/styles/main/_layout.scss
+++ b/app/styles/main/_layout.scss
@@ -20,7 +20,8 @@
 }
 
 .controls {
-  width: 100%;
+  position: fixed;
+  width: 92%;
   background: $header-bg;
   display: flex;
   flex-direction: column;
@@ -85,11 +86,8 @@
   .focus-on-players {
     .controls-wrapper {
       position: fixed;
-      transform: translate(-50%, calc(100vh - 6em));
-    }
-
-    #controls-wrapper.not-min {
-      transform: translate(-50%, calc(89vh - 6em));
+      //transform: translate(-50%, calc(100vh - 6em));
+      transform: translate(-50%, calc(100vh));
     }
 
     .content {
