--- a/app/styles/main/_buttons.scss
+++ b/app/styles/main/_buttons.scss
@@ -6,3 +6,22 @@
     font-size: 1.5em;
   }
 }
+
+.btn-fab {
+  position: fixed;
+  right: 23px;
+  bottom: 23px;
+  padding-top: 15px;
+  margin-bottom: 0;
+  z-index: 998;
+  background-color: #333 !important;
+}
+#floating-action-button .btn {
+  margin: 20px;
+}
+#floating-action-button h2 {
+  padding: 14px;
+  margin: 0;
+  font-size: 16px;
+  font-weight: 400;
+}
