--- a/app/views/main.html
+++ b/app/views/main.html
@@ -30,12 +30,12 @@
            ng-include="'views/player/index.html'">
       </div>
       <div class="row" ng-if="screenSize.xs || screenSize.sm">
-        <div ng-show="screenSize.xs">
+        <div ng-if="screenSize.xs">
           <ul rn-carousel>
             <li class="col-xs-4" ng-controller="PlayerCtrl as Player" ng-repeat="player in fireteam track by $index" ng-include="'views/player/index.html'"></li>
           </ul>
         </div>
-        <div ng-show="screenSize.sm">
+        <div ng-if="screenSize.sm">
           <ul rn-carousel>
             <li><div class="col-xs-12" ng-controller="PlayerCtrl as Player" ng-repeat="player in fireteam track by $index" ng-include="'views/player/index.html'"></div></li>
             <li><div class="col-xs-12"></div></li>
