comment out filter css to improve animation transition

--- a/app/styles/parts/_player-weapons.scss
+++ b/app/styles/parts/_player-weapons.scss
@@ -12,7 +12,7 @@
   flex-shrink: 0;
   width: 5em;
   height: 5em;
-  filter: saturate(1.3);
+  //filter: saturate(1.3);
 
   img {
     border-radius: 5px;
