--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,7 @@
 <button class="btn btn-fab btn-raised btn-material-grey" ng-click="switchFocus()" ng-if="focusOnPlayers"><i class="material-icons">&#xE5CE;</i></button>
 
 <div class="wrapper" ng-class="{'my-dtr': subdomain, 'focus-on-players': focusOnPlayers}">
-  <div id="controls-wrapper" class="controls-wrapper shadow-z-2">
+  <div class="controls-wrapper shadow-z-2">
     <div class="controls" ng-controller="HeaderCtrl">
       <div class="controls__expand" ng-if="screenSize.xs || screenSize.sm || screenSize.md" ng-click="switchFocus()">
         <span ng-if="!fireteam[0]">Blog</span>
