--- a/app/views/directives/weapons.html
+++ b/app/views/directives/weapons.html
@@ -2,7 +2,7 @@
   <div class="weapon col-xs-12" ng-repeat="weapon in weapons track by $index" ng-if="weapons">
     <div class="weapon__img">
       <img class="img-responsive"
-           ng-src="{{'https://www.bungie.net' + weapon.definition.icon}}"
+           ng-src="{{weapon.definition.icon}}"
            alt="{{weapon.definition.name}}">
     </div>
     <div class="weapon__info">
