--- a/app/views/player/index.html
+++ b/app/views/player/index.html
@@ -1,6 +1,5 @@
 <div class="player shadow-z-1"
-     ng-class="{'is-virgin': (player.name !== 'Enter Player Name' && !player.activities.lastTwentyFive), 'with-overlay is-invalid': player.name === 'Enter Player Name'}"
-     ng-if="player.name && $index < 3">
+     ng-class="{'is-virgin': (player.name !== 'Enter Player Name' && !player.activities.lastTwentyFive), 'with-overlay is-invalid': player.invalidResult === true}">
 
   <div ng-include="'views/player/overview.html'"></div>
 
