--- a/app/views/player/index.html
+++ b/app/views/player/index.html
@@ -1,5 +1,4 @@
-<div class="player shadow-z-1"
-     ng-class="{'is-virgin': (!player.activities.lastTwentyFive), 'with-overlay is-invalid': player.invalidResult}">
+<div class="player shadow-z-1" ng-class="{'is-virgin':!player.activities.lastTwentyFive, 'with-overlay is-invalid':player.invalidResult}">
 
   <div ng-include="'views/player/overview.html'"></div>
 
