--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -1,5 +1,5 @@
 <article class="blog-post shadow-z-1">
-  <div class="blog-post__img" ng-style="{'background-image':'url(\'https://www.bungie.net' + currentMap.pgcrImage + '\')'}"></div>
+  <div class="blog-post__img" ng-style="{'background-image':'url(' + currentMap.pgcrImage + ')'}"></div>
   <div class="blog-post__title">
     <h2>Trials Returning on October 16th!</h2>
   </div>
