--- a/app/views/controls/top.html
+++ b/app/views/controls/top.html
@@ -52,7 +52,7 @@
     </div>
   </div>
 </div>
-<div class="current-map shadow-z-1" ng-style="{'background-image':'url(\'https://www.bungie.net' + currentMap.pgcrImage + '\')'}">
+<div class="current-map shadow-z-1" ng-style="{'background-image':'url(' + currentMap.pgcrImage + ')'}">
   <div class="current-map__content">
     <div class="current-map__title">
       <span ng-bind="currentMap.name"></span>
