--- a/app/views/directives/build.html
+++ b/app/views/directives/build.html
@@ -1,7 +1,6 @@
 <div class="player-tab__section">
   <div class="row">
-    <div class="player-cooldown col-xs-4"
-         ng-repeat="stat in stats track by $index" bs-popover="statPopover(stat)">
+    <div class="player-cooldown col-xs-4" ng-repeat="stat in stats track by $index" bs-popover="statPopover(stat)">
       <div class="player-cooldown__label" ng-bind="stat.name"></div>
       <div class="player-cooldown__nr">
         <progress max="10" animate="true" class="progress not-rounded" ng-if="!stat.tiers">
