--- a/app/views/main.html
+++ b/app/views/main.html
@@ -22,19 +22,19 @@
     </div>
     <div class="players" ng-if="fireteam[0] && !status">
       <div class="player-container"
-           ng-if="screenSize.md || screenSize.lg"
+           ng-show="screenSize.md || screenSize.lg"
            ng-controller="PlayerCtrl as Player"
            ng-repeat="player in fireteam track by $index"
            ng-include="'views/player/index.html'">
       </div>
       <div class="row" ng-if="screenSize.xs || screenSize.sm">
         <button class="btn btn-fab btn-raised btn-material-grey" ng-click="switchFocus()" ng-if="focusOnPlayers"><i class="material-icons">&#xE5CE;</i></button>
-        <div ng-if="screenSize.xs">
+        <div ng-show="screenSize.xs">
           <ul rn-carousel>
             <li class="col-xs-4" ng-controller="PlayerCtrl as Player" ng-repeat="player in fireteam track by $index" ng-include="'views/player/index.html'"></li>
           </ul>
         </div>
-        <div ng-if="screenSize.sm">
+        <div ng-show="screenSize.sm">
           <ul rn-carousel>
             <li><div class="col-xs-12" ng-controller="PlayerCtrl as Player" ng-repeat="player in fireteam track by $index" ng-include="'views/player/index.html'"></div></li>
             <li><div class="col-xs-12"></div></li>
