--- a/app/styles/elements/_carousel.scss
+++ b/app/styles/elements/_carousel.scss
@@ -8,10 +8,28 @@ ul[rn-carousel] {
 ul[rn-carousel] > li {
   position: relative;
   margin-left: -100%;
+  width: 100%;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 ul[rn-carousel] > li:first-child {
   margin-left: 0;
+}
+
+ul[rn-carousel] > li:first-child > div {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+ul[rn-carousel] > li:first-child > div:nth-child(2) {
+  position: absolute;
+  margin-left: 100%;
+}
+
+ul[rn-carousel] > li:first-child > div:nth-child(3) {
+  position: absolute;
+  margin-left: 200%;
 }
 
 ul[rn-carousel] img {
@@ -27,22 +45,5 @@ ul[rn-carousel] > li {
   ul[rn-carousel] > li {
     width: 50%;
     margin-left: -50%;
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-
-  ul[rn-carousel] > li:first-child > div {
-    padding-left: 5px;
-    padding-right: 5px;
-  }
-
-  ul[rn-carousel] > li:first-child > div:nth-child(2) {
-    position: absolute;
-    margin-left: 100%;
-  }
-
-  ul[rn-carousel] > li:first-child > div:nth-child(3) {
-    position: absolute;
-    margin-left: 200%;
   }
 }
