--- a/app/views/main.html
+++ b/app/views/main.html
@@ -29,15 +29,14 @@
       </div>
       <div class="row" ng-if="screenSize.xs || screenSize.sm">
         <button class="btn btn-fab btn-raised btn-material-grey" ng-click="switchFocus()" ng-if="focusOnPlayers"><i class="material-icons">&#xE5CE;</i></button>
-        <div ng-show="screenSize.xs">
-          <ul rn-carousel>
-            <li class="col-xs-4" ng-controller="PlayerCtrl as Player" ng-repeat="player in fireteam track by $index" ng-include="'views/player/index.html'"></li>
-          </ul>
-        </div>
-        <div ng-show="screenSize.sm">
-          <ul rn-carousel>
-            <li><div class="col-xs-12" ng-controller="PlayerCtrl as Player" ng-repeat="player in fireteam track by $index" ng-include="'views/player/index.html'"></div></li>
-            <li><div class="col-xs-12"></div></li>
+        <div ng-show="screenSize.xs || screenSize.sm">
+          <ul rn-carousel rn-carousel-deep-watch>
+            <li ng-repeat="placeholder in slides">
+              <div class="col-xs-12" ng-controller="PlayerCtrl as Player"
+                   ng-repeat="player in fireteam track by $index" ng-include="'views/player/index.html'"
+                   ng-if="$parent.$index === 0">
+              </div>
+            </li>
           </ul>
         </div>
       </div>
