Hopefully a big performance optimisation

--- a/app/styles/main/_layout.scss
+++ b/app/styles/main/_layout.scss
@@ -44,18 +44,22 @@
 
   .controls-wrapper {
     position: relative;
-    left: 50%;
-    transform: translate(-50%, 0%);
     width: 100%;
-    transition: transform cubic-bezier(.55,0,.1,1) .3s;
+    max-width: none;
     min-height: 100vh;
     padding: 3em 15px 0 15px;
     box-shadow: none;
+    background: rgba(0, 0, 0, 0.75);
+    transition: transform cubic-bezier(.55,0,.1,1) .3s;
+    transform: translateY(0%);
+    will-change: transform;
   }
 
   .controls {
     border-top-left-radius: 1em;
     border-top-right-radius: 1em;
+    max-width: 420px;
+    margin: 0 auto;
   }
 
   .content {
@@ -69,40 +73,15 @@
     overflow: hidden;
   }
 
-  .overlay {
-    cursor: pointer;
-    pointer-events: auto;
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.75);
-    z-index: 50;
-    transition: opacity linear .3s;
-  }
-
   .focus-on-players {
-    .controls {
-      position: fixed;
-      width: 92%;
-    }
-
     .controls-wrapper {
       position: fixed;
-      //transform: translate(-50%, calc(100vh - 6em));
-      transform: translate(-50%, calc(100vh));
+      transform: translateY(100%);
     }
 
     .content {
       position: static;
-      filter: blur(0px);
       pointer-events: auto;
-    }
-
-    .overlay {
-      opacity: 0;
-      pointer-events: none;
     }
   }
 }
