--- a/app/styles/main/_buttons.scss
+++ b/app/styles/main/_buttons.scss
@@ -7,15 +7,32 @@
   }
 }
 
-.btn-fab {
+.control-btn.btn.btn.btn {
+  display: none;
+  padding: 0;
+  align-items: center;
+  width: 2.5em;
+  height: 2.5em;
   position: fixed;
   right: 23px;
   bottom: 23px;
-  padding-top: 15px;
-  margin-bottom: 0;
   z-index: 998;
-  background-color: #333 !important;
+  background: #03A9F4;
+  color: white;
+
+  i {
+    transform: rotate(-180deg);
+    transition: transform ease-in-out .2s;
+    display: block;
+    font-size: 48px;
+    margin: .25em auto;
+  }
+
+  .focus-on-players & i {
+    transform: rotate(0deg);
+  }
 }
+
 #floating-action-button .btn {
   margin: 20px;
 }
@@ -24,4 +41,10 @@
   margin: 0;
   font-size: 16px;
   font-weight: 400;
+}
+
+@media all and (max-width: 1280px) {
+  .control-btn.btn.btn.btn {
+    display: block;
+  }
 }
