Readded smooth fade of darkness

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -37,6 +37,7 @@
       </div>
     </div>
   </div>
+  <div class="overlay"></div>
   <button class="control-btn btn btn-fab btn-raised btn-material-grey"
           ng-mobile-click="switchFocus()">
     <i class="material-icons">&#xE5CE;</i>
