--- a/app/styles/main/_layout.scss
+++ b/app/styles/main/_layout.scss
@@ -35,11 +35,27 @@
   overflow: hidden;
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.75);
+  display: none;
+}
+
 @media all and (max-width: 1280px) {
   .wrapper {
     display: block;
     overflow: auto;
     min-height: 100vh;
+  }
+
+  .overlay {
+    display: block;
+    opacity: 1;
+    transition: opacity linear .5s;
   }
 
   .controls-wrapper {
@@ -49,7 +65,6 @@
     min-height: 100vh;
     padding: 3em 15px 0 15px;
     box-shadow: none;
-    background: rgba(0, 0, 0, 0.75);
     transition: transform cubic-bezier(.55,0,.1,1) .5s;
     transform: translateY(0%);
     will-change: transform;
@@ -77,6 +92,11 @@
     .controls-wrapper {
       position: fixed;
       transform: translateY(120vh);
+    }
+
+    .overlay {
+      opacity: 0;
+      pointer-events: none;
     }
 
     .content {
