--- a/app/views/main.html
+++ b/app/views/main.html
@@ -16,23 +16,14 @@
     <div class="blog" ng-show="!fireteam[0] && !status">
       <div ng-include="'views/blog/index.html'"></div>
     </div>
-    <div class="players" ng-if="fireteam[0] && !status">
-      <div class="player-container"
-           ng-show="screenSize.md || screenSize.lg"
-           ng-controller="PlayerCtrl as Player"
-           ng-repeat="player in fireteam track by $index"
-           ng-include="'views/player/index.html'">
-      </div>
-      <div class="row" ng-if="screenSize.xs || screenSize.sm">
-        <div>
-          <ul rn-carousel>
-            <li ng-repeat="placeholder in slides">
-              <div class="col-xs-12" ng-controller="PlayerCtrl as Player"
-                   ng-repeat="player in fireteam track by $index" ng-include="'views/player/index.html'"
-                   ng-if="$parent.$index === 0">
-              </div>
-            </li>
-          </ul>
+    <div class="players-wrapper" ng-if="fireteam[0] && !status" ng-class="{'focus-on-player-one': focusOnPlayer === 1, 'focus-on-player-two': focusOnPlayer === 2, 'focus-on-player-three': focusOnPlayer === 3}">
+      <div class="player-shift-focus player-shift-focus--left" ng-mobile-click="shiftPlayerFocus(-1)"></div>
+      <div class="player-shift-focus player-shift-focus--right" ng-mobile-click="shiftPlayerFocus(1)"></div>
+      <div class="players" ng-swipe-right="shiftPlayerFocus(-1)" ng-swipe-left="shiftPlayerFocus(1)">
+        <div class="player-container"
+             ng-controller="PlayerCtrl as Player"
+             ng-repeat="player in fireteam track by $index"
+             ng-include="'views/player/index.html'">
         </div>
       </div>
     </div>
