--- a/app/styles/parts/_player.scss
+++ b/app/styles/parts/_player.scss
@@ -40,11 +40,20 @@
   pointer-events: none;
   transition: opacity linear .3s;
   background: linear-gradient( to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+  cursor: pointer;
+
+  &:hover {
+    background: linear-gradient( to right, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+  }
 }
 
 .player-shift-focus--right {
   right: 0;
   background: linear-gradient( to left, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+
+  &:hover {
+    background: linear-gradient( to left, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+  }
 }
 
 @media all and (max-width: 1280px) {
