--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,7 +9,7 @@
     <div class="container-fluid" ng-if="status">
       <div class="row">
         <div class="text-center alert alert-warning">
-          <strong>{{status}}</strong>
+          <strong ng-bind="status"></strong>
         </div>
       </div>
     </div>
