--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -1,17 +1,17 @@
 <article class="blog-post shadow-z-1">
   <div class="blog-post__img" ng-style="{'background-image':'url(' + currentMap.pgcrImage + ')'}"></div>
   <div class="blog-post__title">
-    <h2>Trials Has Been Delayed</h2>
+    <h2>Trials Starts on October 30!</h2>
   </div>
   <ul class="blog-post__meta">
     <li>
-      <p><span class="material-icons">&#xE8DF;</span> October 21st, 2015</p>
+      <p><span class="material-icons">&#xE8DF;</span> October 24st, 2015</p>
     </li>
   </ul>
   <div class="blog-post__content">
     <p>
-      The much awaited return of Trials of Osiris has been delayed. Bungie has yet to announce the new return date for Trials but they
-      have confirmed that it will not be the weekend of 10/23—10/26. This is due to the release of the hard mode version of the King's Fall raid.<br/>
+      The much awaited return of Trials of Osiris has been announced. In their most recent Weekly Update Bungie confirmed that Trials of Osiris
+      returns on the weekend of 10/30.<br/>
     </p>
     <p>
       Ready your arms against your opponents guardians. You must be ruthless, they will not relent. Your competitive companion,
