Smooth finger following

--- a/app/styles/parts/_player.scss
+++ b/app/styles/parts/_player.scss
@@ -7,6 +7,8 @@
 .players {
   white-space: nowrap;
   transition: transform cubic-bezier(.55,0,.1,1) .3s;
+  perspective: 1000px;
+  backface-visibility: hidden;
 }
 
 .player-container {
