initial faq contentTemplate modal

--- a/app/views/controls/top.html
+++ b/app/views/controls/top.html
@@ -63,3 +63,6 @@
     </div>
   </div>
 </div>
+<button data-ng-click="showModal()" type="button" class="btn btn-info" data-animation="am-fade-and-slide-top">
+ FAQ
+</button>
