updates and minor adjustments

--- a/app/views/controls/bottom.html
+++ b/app/views/controls/bottom.html
@@ -23,7 +23,7 @@
   </div>
   <div class="colofon__contribute">
     <a href="https://github.com/DestinyTrialsReport/DestinyTrialsReport" target="_blank">
-      <img src="images/github.svg" alt="GitHub">
+      <img src="/images/github.svg" alt="GitHub">
     </a>
   </div>
 </div>
