--- a/app/views/controls/top.html
+++ b/app/views/controls/top.html
@@ -58,7 +58,7 @@
     <div class="current-map__title">
       <span ng-bind="currentMap.name"></span>
     </div>
-    <div class="curent-map__heatmap" ng-if="mapModal">
+    <div class="current-map__heatmap" ng-if="mapModal">
       <button type="button" class="btn btn-default btn-sm" bs-modal="mapModal">Heatmap</button>
     </div>
   </div>
