--- a/app/styles/parts/_current-map.scss
+++ b/app/styles/parts/_current-map.scss
@@ -29,7 +29,7 @@
   }
 }
 
-.curent-map__heatmap .btn.btn.btn {
+.current-map__heatmap .btn.btn.btn {
   color: $controls-btn-color;
   margin: 0;
   margin-right: -15px;
