new syntax for modals, initial FAQs

--- a/app/views/controls/bottom.html
+++ b/app/views/controls/bottom.html
@@ -1,6 +1,7 @@
 <div class="domain-switch">
   <a type="button" class="btn btn-default" ng-if="!subdomain" href="http://my.destinytrialsreport.com" target="_self"><span class="highlight">my</span>Report</a>
   <a type="button" class="btn btn-default" ng-if="subdomain" href="http://www.destinytrialsreport.com" target="_self"><span class="highlight">trials</span>Report</a>
+  <button type="button" class="btn btn-default" ng-mobile-click="showFAQ()"><span class="highlight">FAQ</span></button>
 </div>
 
 <div class="donate">
