--- a/app/views/modals/faq.html
+++ b/app/views/modals/faq.html
@@ -1,1 +1,15 @@
-<div>test</div>
+<!-- This needs styling love before merge -->
+<div class="faq-modal">
+  <div class="faq-container">
+    <p class="faq-question">Why don't you show how many times someone has gone flawless?</p>
+    <p class="faq-answer">Unfortunately, Bungie does not give us this information. We're eagerly awaiting the day they do!</p>
+  </div>
+  <div class="faq-container">
+    <p class="faq-question">Why don't you support other game modes like Skirmish, for example?</p>
+    <p class="faq-answer">Bungie does not let us see the current fireteam you're matched with. We're considering it, but it would likely require manual entry of player names.</p>
+  </div>
+  <div class="faq-container">
+    <p class="faq-question">What data do you store on your servers?</p>
+    <p class="faq-answer">We don't store any data at all. Everything you see is loaded directly from Bungie!</p>
+  </div>
+</div>
