add recent players dropdown when searching teammates

--- a/app/styles/parts/_main-search.scss
+++ b/app/styles/parts/_main-search.scss
@@ -50,9 +50,17 @@
       padding-left: $controls-padding;
     }
   }
+
+  &.open {
+    position: relative;
+  }
 }
 
 .main-search__replace {
   float: right;
   margin-left: 6px;
+}
+
+.dropdown-menu {
+  min-width: 100%;
 }
