--- a/app/views/controls/top.html
+++ b/app/views/controls/top.html
@@ -40,13 +40,25 @@
         <form role="form" ng-submit="searchPlayerbyName(player, teammateName, platformValue, $index)">
           <div class="main-search__row">
             <div class="main-search__input">
-              <input type="text" class="form-control" placeholder="{{fireteam[$index].name || 'Enter their teammates\' gamertag'}}" ng-model="teammateName">
+              <input type="text" class="form-control" placeholder="{{fireteam[$index].name || 'Enter their teammates\' gamertag'}}" ng-model="teammateName" ng-click="suggestRecentPlayers()" data-toggle="dropdown">
+              <ul class="dropdown-menu">
+                <li ng-repeat="recentPlayer in recentPlayers"><a href="#" ng-click="searchPlayerbyName(recentPlayer.name, platformValue, $parent.$index)" ng-bind="recentPlayer.name"></a></li>
+              </ul>
             </div>
             <div class="main-search__controls">
               <div class="main-search__submit">
                 <button type="submit" class="btn btn-default btn-icon" ng-disabled="status"><i class="material-icons">&#xE163;</i></button>
               </div>
             </div>
+            <!--<div class="btn-group">-->
+              <!--<a href="bootstrap-elements.html" data-target="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown">-->
+                <!--Dropdown-->
+                <!--<span class="caret"></span>-->
+              <!--</a>-->
+              <!--<ul class="dropdown-menu">-->
+                <!--<li ng-repeat="player in recentPlayers"><a href="#">{{player.name}}</a></li>-->
+              <!--</ul>-->
+            <!--</div>-->
           </div>
         </form>
       </div>
