fix mobile dropdown and filter list by input

--- a/app/views/controls/top.html
+++ b/app/views/controls/top.html
@@ -40,9 +40,12 @@
         <form role="form" ng-submit="searchPlayerbyName(player, teammateName, platformValue, $index)">
           <div class="main-search__row">
             <div class="main-search__input">
-              <input type="text" class="form-control" placeholder="{{fireteam[$index].name || 'Enter their teammates\' gamertag'}}" ng-model="teammateName" ng-click="suggestRecentPlayers()" data-toggle="dropdown">
+              <input type="text" class="form-control" placeholder="{{fireteam[$index].name || 'Enter their teammates\' gamertag'}}"
+                     ng-model="teammateName" basic-click="suggestRecentPlayers()" ng-change="filter(teammateName)" data-toggle="dropdown">
               <ul class="dropdown-menu">
-                <li ng-repeat="recentPlayer in recentPlayers"><a href="#" ng-click="searchPlayerbyName(recentPlayer.name, platformValue, $parent.$index)" ng-bind="recentPlayer.name"></a></li>
+                <li ng-repeat="recentPlayer in recentPlayers" ng-if="recentPlayer.name !== fireteam[$parent.$index].name">
+                  <a href="#" ng-click="searchPlayerbyName(recentPlayer.name, platformValue, $parent.$parent.$index)" ng-bind="recentPlayer.name"></a>
+                </li>
               </ul>
             </div>
             <div class="main-search__controls">
@@ -50,15 +53,6 @@
                 <button type="submit" class="btn btn-default btn-icon" ng-disabled="status"><i class="material-icons">&#xE163;</i></button>
               </div>
             </div>
-            <!--<div class="btn-group">-->
-              <!--<a href="bootstrap-elements.html" data-target="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown">-->
-                <!--Dropdown-->
-                <!--<span class="caret"></span>-->
-              <!--</a>-->
-              <!--<ul class="dropdown-menu">-->
-                <!--<li ng-repeat="player in recentPlayers"><a href="#">{{player.name}}</a></li>-->
-              <!--</ul>-->
-            <!--</div>-->
           </div>
         </form>
       </div>
