--- a/app/styles/elements/_modal.scss
+++ b/app/styles/elements/_modal.scss
@@ -27,12 +27,33 @@
   background: #333;
 }
 
-.modal-content .modal-body {
+.modal-content .modal-footer {
+  text-align: center;
+  box-shadow: inset 0 10px 8px -10px rgba(0,0,0,0.5);
   padding: 0;
+
+  button {
+    color: white;
+    text-indent: -9999px;
+    line-height: 0;
+    display: block;
+    width: 100%;
+    border-bottom-left-radius: 2em;
+    border-bottom-right-radius: 2em;
+    padding: 1em 0;
+
+    &:after {
+      line-height: initial;
+      display: block;
+      text-indent: 0;
+      color: white;
+      content: "Close";
+    }
+  }
 }
 
-.modal-footer {
-  display: none;
+.modal-content .modal-body {
+  padding: 0;
 }
 
 .map-modal__intro {
@@ -58,8 +79,8 @@
   text-shadow: 0px 2px 3px rgba(0,0,0,0.5);
 }
 
-.close, .close:hover {
-  color: $equipped-background;
+.close {
+  display: none;
 }
 
 .faq-modal__container {
