Removed additional fire team members for subdomain

--- a/app/views/controls/top.html
+++ b/app/views/controls/top.html
@@ -36,7 +36,7 @@
           </div>
         </div>
       </form>
-      <div ng-if="fireteam[0].name && $index < 3 && $index > 0" ng-repeat="player in fireteam track by $index">
+      <div ng-if="!subdomain && fireteam[0].name && $index < 3 && $index > 0" ng-repeat="player in fireteam track by $index">
         <form role="form" ng-submit="searchPlayerbyName(player, teammateName, platformValue, $index)">
           <div class="main-search__row">
             <div class="main-search__input">
