--- a/app/views/modals/faq.html
+++ b/app/views/modals/faq.html
@@ -1,6 +1,10 @@
 <!-- This needs styling love before merge -->
 <div class="faq-modal">
   <div class="faq-modal__container">
+    <p class="faq-modal__question">Is there a Destiny Trials Report app?</p>
+    <p class="faq-modal__answer">Not for the time being, but you can achieve a native app feeling by <a href="http://www.howtogeek.com/196087/how-to-add-websites-to-the-home-screen-on-any-smartphone-or-tablet/" target="_blank">adding this webpage to your homescreen</a>.</p>
+  </div>
+  <div class="faq-modal__container">
     <p class="faq-modal__question">Why don't you show how many times someone has gone flawless?</p>
     <p class="faq-modal__answer">Unfortunately, Bungie does not give us this information. We're eagerly awaiting the day they do!</p>
   </div>
@@ -11,5 +15,9 @@
   <div class="faq-modal__container">
     <p class="faq-modal__question">What data do you store on your servers?</p>
     <p class="faq-modal__answer">We don't store any data at all. Everything you see is loaded directly from Bungie!</p>
+  </div>
+  <div class="faq-modal__container">
+    <p class="faq-modal__question">This is so awesome that I'm throwing money at my screen. Is there something wrong?</p>
+    <p class="faq-modal__answer">Probably not. But nstead of throwing money at your screen you can support us by <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=A3T6F2QDXUTCN" target="_blank">donating through Paypal</a>!</p>
   </div>
 </div>
