--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,6 @@
 <div class="wrapper" ng-class="{'my-dtr':subdomain, 'focus-on-players':focusOnPlayers}">
-  <div class="controls-wrapper shadow-z-2" ng-mobile-click="switchFocus()">
-    <div class="controls" ng-controller="HeaderCtrl" ng-mobile-click="$event.stopPropagation()">
+  <div class="controls-wrapper shadow-z-2">
+    <div class="controls" ng-controller="HeaderCtrl">
       <header ng-include="'views/controls/top.html'"></header>
       <footer ng-include="'views/controls/bottom.html'"></footer>
     </div>
@@ -29,7 +29,7 @@
       </div>
     </div>
   </div>
-  <div class="overlay"></div>
+  <div class="overlay" ng-mobile-click="switchFocus()"></div>
   <button class="control-btn btn btn-fab btn-raised btn-material-grey"
           ng-mobile-click="switchFocus()">
     <i class="material-icons">&#xE5CE;</i>
